--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,7 +11,7 @@
 
     {% comment %} Testimonial Button {% endcomment %}
     <section class="footer-cta mb-2">
-      <a href="{% url 'create_testimonial' %}" class="btn btn-success btn-sm rounded-0 text-uppercase">
+      <a href="{% url 'create_testimonial' %}" class="btn btn-green btn-sm rounded-0 text-uppercase">
         Leave a Review
       </a>
     </section>
